--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,55 @@
-numpy==1.18.5
-pandas==1.4.2
-matplotlib==3.3.1
-seaborn==0.11.0
-pandas-profiling==3.1.0
-plotly==4.12.0
-ppscore==1.2.0
-
-streamlit==0.85.0
-
-feature-engine==1.0.2
-imbalanced-learn==0.8.0
-scikit-learn==0.24.2
-xgboost==1.2.1
-yellowbrick==1.3
-Jinja2==3.1.1
-MarkupSafe==2.0.1
-protobuf==3.20
-ipywidgets==8.0.2
+altair==5.0.1
+blinker==1.6.2
+cachetools==5.3.1
+click==8.1.3
+contourpy==1.1.0
+cycler==0.11.0
+feature-engine==1.6.1
+fonttools==4.40.0
+htmlmin==0.1.12
+ImageHash==4.3.1
+imbalanced-learn==0.10.1
+ipywidgets==8.0.6
+joblib==1.1.1
+jupyterlab-widgets==3.0.7
+kiwisolver==1.4.4
+matplotlib==3.7.1
+missingno==0.5.2
+multimethod==1.9.1
+networkx==3.1
+numpy==1.25.0
+pandas==1.5.3
+pandas-profiling==3.2.0
+patsy==0.5.3
+phik==0.12.3
+Pillow==9.5.0
+plotly==5.15.0
+ppscore==1.3.0
+protobuf==4.23.3
+pyarrow==12.0.1
+pydantic==1.10.9
+pydeck==0.8.1b0
+Pympler==1.0.1
+pyparsing==3.0.9
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+PyWavelets==1.4.1
+scikit-learn==1.2.2
+scipy==1.10.1
+seaborn==0.12.2
+statsmodels==0.14.0
+streamlit==1.23.1
+tangled-up-in-unicode==0.2.0
+tenacity==8.2.2
+threadpoolctl==3.1.0
+toml==0.10.2
+toolz==0.12.0
+tqdm==4.65.0
+tzdata==2023.3
+tzlocal==4.3
+validators==0.20.0
+visions==0.7.4
+watchdog==3.0.0
+widgetsnbextension==4.0.7
+xgboost==1.7.5
+yellowbrick==1.5
